rest/rest-deployment.yaml
##
## You provide this
##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server
  labels:
    app: rest-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-server
        image: chaitanyab2311/sentiment-rest:v1
        resources:
          limits:
            cpu: 100m  
            memory: 400Mi
        ports:
        - containerPort: 5001
